--- a/p8.html
+++ b/p8.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Genuine Ring Doorbell B15169 Battery 1st Gen 3.75V 5000mAh">
-    <meta name="description" content="">
+    <meta name="description" content="Genuine Ring Doorbell B15169 Battery 1st Gen 3.75V 5000mAh">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Genuine Ring Doorbell B15169 Battery 1st Gen 3.75V 5000mAh</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
