--- a/All-Products.html
+++ b/All-Products.html
@@ -97,18 +97,18 @@
             </div><!--/product_item--><!--product_item-->
             <div class="u-align-left u-container-style u-products-item u-repeater-item u-shape-rectangle u-white u-repeater-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-3"><!--product_image-->
-                <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-3" src="images/7.svg"><!--/product_image--><!--product_title-->
+                <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-3" src="images/ha1.jpg"><!--/product_image--><!--product_title-->
                 <h4 class="u-product-control u-text u-text-6">
-                  <a class="u-product-title-link" href="#"><!--product_title_content-->Product 3 Title<!--/product_title_content--></a>
+                  <a class="u-product-title-link" href="p11.html"><!--product_title_content-->Helping Hands Station<!--/product_title_content--></a>
                 </h4><!--/product_title--><!--product_content-->
-                <div class="u-product-control u-product-desc u-text u-text-7"><!--product_content_content-->I promise to put <b>some'em</b> here for sale<!--/product_content_content--></div><!--/product_content--><!--product_price-->
+                <div class="u-product-control u-product-desc u-text u-text-7"><!--product_content_content-->Dual Adjustable Alligator Clips 2.5x Magnifying Glass Soldering Station<!--/product_content_content--></div><!--/product_content--><!--product_price-->
                 <div class="u-product-control u-product-price u-product-price-3">
                   <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
                     <div class="u-hide-price u-old-price"><!--product_old_price_content-->$12<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-                    <div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$9.95<!--/product_regular_price_content--></div><!--/product_regular_price-->
+                    <div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$14.95<!--/product_regular_price_content--></div><!--/product_regular_price-->
                   </div>
                 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-                <a href="" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-3"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+                <a href="p11.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-3"><!--product_button_content-->Details<!--/product_button_content--></a><!--/product_button-->
               </div>
             </div><!--/product_item--><!--product_item-->
             <div class="u-align-left u-container-style u-products-item u-repeater-item u-shape-rectangle u-white u-repeater-item-4">
