--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 <!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
 <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->Salvaged cells fully tested <br> <b>Guaranteed 100% Capacity</b><!--/product_content_content--></div><!--/product_content--><!--product_price-->
-<div class="u-product-control u-product-price u-product-price-1">
+<div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$12<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$3.49 ea.<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$3.49 ea<!--/product_regular_price_content--></div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
 <a href="p1.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-1"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
@@ -126,7 +126,7 @@
 <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
 <p>Balance your 30ah/200ah <b>3s</b> battery pack with ease.</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
-<div class="u-product-control u-product-price u-product-price-4">
+<div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$25.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
 <div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$36.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
@@ -144,7 +144,7 @@
 <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
 <p>Continuous <b>60amp</b> rating!</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
-<div class="u-product-control u-product-price u-product-price-5">
+<div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$10.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
 <div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$19.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
@@ -162,7 +162,7 @@
 <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
 <p>Support for multiple module extension connections.</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
-<div class="u-product-control u-product-price u-product-price-6">
+<div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$175.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
 <div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$16.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
@@ -180,7 +180,7 @@
 <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
 <p>Optimize your battery pack with <b>rePackr!</b></p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
-<div class="u-product-control u-product-price u-product-price-7">
+<div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
 <div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->FREE!<!--/product_regular_price_content--></div><!--/product_regular_price-->
@@ -198,7 +198,7 @@
 <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
 <p>Reliable Energy | 5.41A</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
-<div class="u-product-control u-product-price u-product-price-8">
+<div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$300.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
 <div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$99.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
@@ -216,7 +216,7 @@
 <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
 <p>Gaurantee 95% Capacity</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
-<div class="u-product-control u-product-price u-product-price-9">
+<div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class=" u-hide-price u-old-price"><!--product_old_price_content-->Free Shipping<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
 <div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$13.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
