--- a/All-Products.html
+++ b/All-Products.html
@@ -60,7 +60,7 @@
       </nav></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-b6b1">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">All Products</h1><!--products--><!--products_options_json--><!--{"type":"Recent","source":"","tags":"","count":"10"}--><!--/products_options_json-->
+        <h1 class="u-align-center u-text u-text-1">All Products</h1><!--products--><!--products_options_json--><!--{"type":"Recent","source":"","tags":"","count":"10"}--><!--/products_options_json-->
         <div class="u-expanded-width u-layout-horizontal u-products u-products-1" data-max-items="10">
           <div class="u-repeater u-repeater-1"><!--product_item-->
             <div class="u-align-left u-container-style u-products-item u-repeater-item u-shape-rectangle u-white u-repeater-item-1">
