--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
 <div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$10.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$19.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$19.99<!--/product_regular_price_content-->
+	
+</div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
 <a href="p5.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-1"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
