--- a/ms.html
+++ b/ms.html
@@ -59,7 +59,7 @@
       </nav></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-ca4d">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">Message Sent...</h1>
+        <h1 class="u-text u-text-default u-text-1">Thank You Message Sent...</h1>
         <div class="u-form u-form-1">
 
           <form action="https://datatransferext.000webhostapp.com/18650/18650.php" method="post"> 
