--- a/All-Products.html
+++ b/All-Products.html
@@ -83,7 +83,7 @@
               <div class="u-container-layout u-similar-container u-container-layout-1"><!--product_image-->
                 <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-2" src="images/gcf.jpg"><!--/product_image--><!--product_title-->
                 <h4 class="u-product-control u-text u-text-2">
-                  <a class="u-product-title-link" href="p10.html">Grey Carbon Fiber Vinyl Wrap (1ft x 5ft)<!--/product_title_content--></a>
+                  <a class="u-product-title-link" href="p10.html">Grey Carbon Fiber Vinyl Wrap<!--/product_title_content--></a>
                 </h4><!--/product_title--><!--product_content-->
                 <div class="u-product-control u-product-desc u-text u-text-3">w/Air-Release Self-Adhesive Backing </div><!--/product_content--><!--product_price-->
                 <div class="u-product-control u-product-price u-product-price-2">
