--- a/All-Products.html
+++ b/All-Products.html
@@ -58,7 +58,7 @@
           <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
       </nav></header>
-    <section class="u-align-center u-clearfix u-section-1" id="sec-b6b1">
+    <section class="u-clearfix u-section-1" id="sec-1966">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-text u-text-1">All Products</h1><!--products--><!--products_options_json--><!--{"type":"Recent","source":"","tags":"","count":"10"}--><!--/products_options_json-->
         <div class="u-expanded-width u-layout-horizontal u-products u-products-1" data-max-items="10">
