--- a/All-Products.html
+++ b/All-Products.html
@@ -61,9 +61,9 @@
 
     <section class="u-align-center u-clearfix u-section-1" id="sec-b6b1">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-text u-text-1">All Products</h1></div></section>
+        <h1 class="u-align-center u-text u-text-1">All Products</h1><br>
 
-        <section class="u-align-center u-clearfix u-section-2" id="sec-4a07">
+        <section class="u-align-center u-clearfix u-section-1" id="sec-4a07">
         <div class="u-expanded-width u-layout-horizontal u-products u-products-1" data-max-items="10">
           <div class="u-repeater u-repeater-1"><!--product_item-->
             <div class="u-align-left u-container-style u-products-item u-repeater-item u-shape-rectangle u-white u-repeater-item-1">
