--- a/All-Products.html
+++ b/All-Products.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="18650, batteries, battery, lithium, Li-Polymer, Li-ion, Life-Po, Genuine Ring Doorbell B15169 5-PIN Battery Replacement 1st Gen 3.75V 5000mAh">
 <meta name="description" content="New and used 18650 rechargeble lithium batteries sold here are 100% tested. Offering custom battery pack assembly and more. ">
 <meta name="page_type" content="np-template-header-footer-from-plugin">
-<title>Just 18650s</title>
+<title>All Products</title>
 <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
 <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
