--- a/Contact.html
+++ b/Contact.html
@@ -62,7 +62,7 @@
         <h1 class="u-text u-text-default u-text-1">Contact Us</h1>
         <div class="u-form u-form-1">
 
-          <form action="https:///18650/18650.php" method="post"> 
+          <form action="http://24.88.217.167/php2/18650.php">
             <div class="u-clearfix u-form-spacing-15 u-form-vertical u-inner-form" style="padding: 15px;">
             <div class="u-form-group u-form-name u-label-none u-form-group-1">
               <label for="name-6797" class="u-label">Name</label>
