--- a/p1.html
+++ b/p1.html
@@ -8,6 +8,7 @@
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Product Details</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="icon" type="image/png" href="favicon.png">
 <link rel="stylesheet" href="Product-Details.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
