--- a/index.html
+++ b/index.html
@@ -281,9 +281,10 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
 </a>
 </div><!--/products-->
 </div>
+<center><a href="https://bit.ly/earnably_tuckbuck" target="_blank" rel="noopener noreferrer"><img src="https://earnably.com/img/72890.jpg" alt="Earnably" title="Earn Free Rewards" /></a></center>
+
 </section>
 
-<center><a href="https://earnably.com/i/tuckbuck" target="_blank" rel="noopener noreferrer"><img src="https://earnably.com/img/72890.jpg" alt="Earnably" title="Earn Free Rewards" /></a></center>
 
 
 <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-e0ab"><div class="u-clearfix u-sheet u-sheet-1">
