--- a/All-Products.html
+++ b/All-Products.html
@@ -123,20 +123,20 @@
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-4">
 <div class="u-container-layout u-similar-container u-container-layout-4"><!--product_image-->
-<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-4" src="images/7.svg"><!--/product_image--><!--product_title-->
+<img href="p12.html" alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-4" src="images/bp1.jpg"><!--/product_image--><!--product_title-->
 <h4 class="u-product-control u-text u-text-1">
-<a class="u-product-title-link" href="#">Product 4 Title</a>
+<a class="u-product-title-link" href="p12.html">Replacement 26S1014 Battery For Amazon 58-000181 26S1014-Y 1ICP4/100/118</a>
 </h4><!--/product_title--><!--product_content-->
 <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
-<p><b>Coming Soon!</b></p><!--/product_content_content-->
+<p><b>4750mAh/17.57Wh</b></p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$25.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$36.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$12.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-<a href="#" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-1"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
+<a href="p12.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-1"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
 </div>
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-5">
