--- a/ty_2.html
+++ b/ty_2.html
@@ -62,7 +62,7 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
     <div class="u-text u-text-default u-text-1"><!--product_content_content-->
               <h1>Thank You!</h1><br><br>
-              <h2>Your International shipping payment has been accepted. Your item will be shipping to right away.</h2>
+              <h2>Your International Shipping Payment has been accepted. Your item will be shipped right away.</h2>
             </body>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></section>
     
